--- a/css/main.css
+++ b/css/main.css
@@ -775,6 +775,174 @@ template {
   background-size: 220px 308px;
 }
 
+.order {
+  width: 100%;
+  padding-top: 8.375rem;
+}
+
+.order__title {
+  text-align: center;
+  margin-bottom: 13.3125rem;
+  font-family: "AmaticSC-Bold";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 3rem;
+  color: rgba(0, 0, 0, 0.9);
+  text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.25);
+}
+
+.order .order-list {
+  margin: 0 25rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.order .order__item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.order .order__text {
+  margin-bottom: 2.4375rem;
+  font-family: "AmaticSC-Bold";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 2.25rem;
+  color: rgba(0, 0, 0, 0.8);
+  text-shadow: 0px 4px 2px rgba(129, 128, 128, 0.25);
+}
+
+.order .catalog-icon {
+  width: 2.125rem;
+  height: 2.375rem;
+  fill: #F47F12;
+}
+
+.order .toy-icon {
+  width: 2.5rem;
+  height: 2.9375rem;
+  fill: #F47F12;
+}
+
+.order .rocket-icon {
+  width: 2.625rem;
+  height: 2.9375rem;
+  fill: #F47F12;
+}
+
+.order .order-line-1,
+.order .order-line-2 {
+  position: absolute;
+  max-width: none;
+}
+
+.order .order-line-1 {
+  top: 7.5rem;
+  left: 5.3125rem;
+  width: 28.125rem;
+  height: 7.875rem;
+  margin-bottom: 4.0625rem;
+}
+
+.order .order-line-2 {
+  top: -5.625rem;
+  left: 6.25rem;
+  width: 27.5625rem;
+  height: 17.0625rem;
+}
+
+.order .arrows--up {
+  transform: rotate(180deg);
+}
+
+.footer {
+  position: relative;
+  width: 100%;
+  padding: 4.6875rem 5.0625rem 5.375rem 5.0625rem;
+  background: #2C2C2C;
+}
+
+.footer__inner {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer .logo {
+  margin-top: 0.625rem;
+}
+
+.footer .logo__title--footer,
+.footer .logo__subtitle--footer {
+  color: #FFFFFF;
+}
+
+.footer .col__title {
+  margin-bottom: 3.75rem;
+  font-family: "Montserrat-SemiBold";
+  font-weight: 600;
+  font-style: normal;
+  font-size: 1.75rem;
+  color: #FFFFFF;
+}
+
+.footer .col__text {
+  position: relative;
+  margin-bottom: 2.5rem;
+  padding-left: 3.125rem;
+  font-family: "Montserrat-Regular";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 1.75rem;
+  color: #FFFFFF;
+}
+
+.footer .col__text svg {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  fill: #fff;
+}
+
+.footer .first-col,
+.footer .second-col,
+.footer .third-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer .fourth-col {
+  padding-top: 2.625rem;
+}
+
+.footer .catalog--footer {
+  margin-top: 0;
+}
+
+.footer .catalog__circle--footer {
+  position: absolute;
+  top: -4.1875rem;
+  right: 15.625rem;
+}
+
+.footer .catalog__circle--footer::before {
+  display: none;
+}
+
+.footer .catalog__circle--footer::after {
+  border: 2px dashed #F47F12;
+}
+
+.footer .unicorn-line {
+  position: absolute;
+  top: 5.9375rem;
+  right: 14.3125rem;
+  width: 5.75rem;
+  height: 7.25rem;
+}
+
 /* BLOCKS */
 
 .top-menu {
@@ -979,6 +1147,11 @@ template {
   text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.25);
 }
 
+.main-slider .slider {
+  width: 28.875rem;
+  height: 34.375rem;
+}
+
 .main-slider .slide {
   width: 28.875rem;
   height: 34.375rem;
@@ -995,6 +1168,27 @@ template {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.owl-dots {
+  display: flex;
+  margin-top: 1.6875rem;
+}
+
+.owl-dot {
+  width: 1.0625rem;
+  height: 1.0625rem;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.owl-dot:nth-child(2) {
+  margin: 0 1.25rem;
+}
+
+.owl-dot.active {
+  background: #FFBB36;
+  border: none;
 }
 
 .tree {
