--- a/css/main.css
+++ b/css/main.css
@@ -619,7 +619,7 @@ template {
   width: 100%;
   background-image: url(../img/orange-arc.svg), url(../img/header-bg-desktop@1x.jpg);
   background-repeat: no-repeat, no-repeat;
-  background-position: 43% 0, center;
+  background-position: 43% 36px, center;
   background-size: contain, cover;
 }
 
@@ -633,22 +633,22 @@ template {
 .cart {
   position: absolute;
   z-index: 1000;
-  top: 6.0625rem;
-  right: 5.125rem;
-  width: 1.875rem;
-  height: 2.1875rem;
+  top: 2.5rem;
+  right: 1.25rem;
+  width: 0.9375rem;
+  height: 1.25rem;
   fill: #fff;
 }
 
 .cite-right {
   position: absolute;
-  max-width: 11.25rem;
-  top: 32.625rem;
-  right: 10.625rem;
+  width: 6.25rem;
+  top: 17.5rem;
+  right: 2.25rem;
   font-family: "AmaticSC-Bold";
   font-weight: normal;
   font-style: normal;
-  font-size: 2.25rem;
+  font-size: 0.75rem;
   text-align: center;
   color: rgba(0, 0, 0, 0.8);
   transform: rotate(16.15deg);
@@ -657,10 +657,10 @@ template {
 .cite-right::after {
   position: absolute;
   content: "";
-  top: -3.875rem;
-  right: -6.625rem;
-  width: 24.5625rem;
-  height: 13.125rem;
+  top: -1.5rem;
+  right: -1rem;
+  width: 8.125rem;
+  height: 4.625rem;
   background-image: url(../img/dashed-elipse.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -670,13 +670,13 @@ template {
 
 .cite-left {
   position: absolute;
-  max-width: 13.75rem;
-  top: 52.8125rem;
-  left: 10rem;
+  width: 6.25rem;
+  top: 28.6875rem;
+  left: 2.9375rem;
   font-family: "AmaticSC-Bold";
   font-weight: normal;
   font-style: normal;
-  font-size: 2.25rem;
+  font-size: 0.75rem;
   text-align: center;
   color: rgba(0, 0, 0, 0.8);
   transform: rotate(-25.38deg);
@@ -685,10 +685,10 @@ template {
 .cite-left::after {
   position: absolute;
   content: "";
-  top: -3.9375rem;
-  left: -5.4375rem;
-  width: 24.5625rem;
-  height: 13.125rem;
+  top: -1.5625rem;
+  left: -1.25rem;
+  width: 8.125rem;
+  height: 4.625rem;
   background-image: url(../img/dashed-elipse.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -699,15 +699,15 @@ template {
 .socials {
   position: absolute;
   z-index: 1000;
-  width: 12.5625rem;
-  height: 8.75rem;
-  top: 35.375rem;
-  left: 8.25rem;
+  width: 6.25rem;
+  height: 4.125rem;
+  top: 16.0625rem;
+  left: 2.0625rem;
   padding-left: 0.125rem;
   font-family: "AmaticSC-Bold";
   font-weight: normal;
   font-style: normal;
-  font-size: 1.5rem;
+  font-size: 0.75rem;
   color: rgba(0, 0, 0, 0.8);
   transform: rotate(-18deg);
 }
@@ -716,10 +716,10 @@ template {
   position: absolute;
   content: "";
   z-index: -1;
-  top: -2.875rem;
-  left: -8.5625rem;
-  width: 18.25rem;
-  height: 11.5rem;
+  top: -1.0625rem;
+  left: -3.9375rem;
+  width: 8.5625rem;
+  height: 5.4375rem;
   background-image: url(../img/rectangle.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -729,13 +729,13 @@ template {
 
 .socials-list {
   display: flex;
-  margin: 0.9375rem 0 0 0.3125rem;
+  margin: 0.3125rem 0 0 -0.125rem;
 }
 
 .socials-list .instagram {
-  width: 2.0625rem;
-  height: 2.25rem;
-  margin-right: 1.625rem;
+  width: 1.125rem;
+  height: 1.3125rem;
+  margin-right: 0.9375rem;
   background-image: url(../img/instagram.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -744,8 +744,8 @@ template {
 }
 
 .socials-list .vk {
-  width: 2.3125rem;
-  height: 2.5625rem;
+  width: 1.375rem;
+  height: 1.625rem;
   background-image: url(../img/vk.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -754,8 +754,8 @@ template {
 }
 
 .arrows {
-  width: 4.125rem;
-  height: 4.125rem;
+  width: 2.5rem;
+  height: 2.5rem;
   margin: 7.6875rem auto 1.0625rem auto;
   border: 1px dashed #F47F12;
   border-radius: 50%;
@@ -763,7 +763,7 @@ template {
   background-image: url(../img/arrows-double.svg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 25px, 31px;
+  background-size: 15px, 21px;
 }
 
 .slider-section {
@@ -955,18 +955,22 @@ template {
 
 .top-menu .menu-list {
   display: flex;
-  margin-left: 5rem;
+  margin-left: 1.25rem;
 }
 
 .top-menu .menu__item {
-  margin-left: 5rem;
+  margin-left: 1.25rem;
+}
+
+.top-menu .menu__item:nth-child(1) {
+  margin-left: 0;
 }
 
 .top-menu .menu__link {
   font-family: "AmaticSC-Bold";
   font-weight: normal;
   font-style: normal;
-  font-size: 1.875rem;
+  font-size: 0.875rem;
   text-transform: uppercase;
   color: #FFFFFF;
 }
@@ -978,21 +982,21 @@ template {
 .top-menu .phone {
   position: relative;
   margin-left: auto;
-  margin-right: 5rem;
+  margin-right: 1.25rem;
   font-family: "Montserrat-Regular";
   font-weight: normal;
   font-style: normal;
-  font-size: 1.75rem;
+  font-size: 0.875rem;
   color: #FFFFFF;
 }
 
 .top-menu .phone svg {
   position: absolute;
   top: 50%;
-  left: -2.5rem;
+  left: -1.125rem;
   transform: translateY(-50%);
-  width: 1.875rem;
-  height: 2.1875rem;
+  width: 0.9375rem;
+  height: 1.25rem;
   fill: #fff;
 }
 
@@ -1006,24 +1010,24 @@ template {
 
 .logo {
   position: relative;
-  width: 13rem;
+  width: 7.1875rem;
   display: flex;
   flex-direction: column;
 }
 
 .logo img {
   position: absolute;
-  right: 0;
-  top: 5.625rem;
-  width: 5.625rem;
-  height: 3.4375rem;
+  right: 0rem;
+  top: 3.25rem;
+  width: 3.75rem;
+  height: 1.5625rem;
 }
 
 .logo__title {
   font-family: "Teko-Light";
   font-weight: 300;
   font-style: normal;
-  font-size: 6rem;
+  font-size: 3.125rem;
   line-height: 76.8%;
   letter-spacing: -0.045em;
   text-transform: uppercase;
@@ -1032,35 +1036,35 @@ template {
 }
 
 .logo__subtitle {
-  margin-top: 1.25rem;
+  margin-top: 0.625rem;
   font-family: "Montserrat-SemiBold";
   font-weight: 600;
   font-style: normal;
-  font-size: 0.875rem;
+  font-size: 0.5rem;
   color: #000000;
 }
 
 .main-title {
   position: relative;
-  max-width: 48.8125rem;
+  max-width: 17.1875rem;
   margin: 0;
-  margin-top: 5rem;
+  margin-top: 1.25rem;
   font-family: "AmaticSC-Bold";
   font-weight: normal;
   font-style: normal;
-  font-size: 4.25rem;
+  font-size: 1.5625rem;
   text-align: center;
   color: #000000;
 }
 
 .catalog {
-  margin-top: 8.125rem;
+  margin-top: 5rem;
 }
 
 .catalog__circle {
   position: relative;
-  width: 8.75rem;
-  height: 8.75rem;
+  width: 3.75rem;
+  height: 3.75rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1068,7 +1072,7 @@ template {
   font-family: "AmaticSC-Bold";
   font-weight: normal;
   font-style: normal;
-  font-size: 2.5rem;
+  font-size: 1.125rem;
   color: #3F527D;
   text-shadow: 0px 4px 8px rgba(49, 49, 49, 0.25);
   border-radius: 50%;
@@ -1107,26 +1111,26 @@ template {
   font-family: "AmaticSC-Bold";
   font-weight: normal;
   font-style: normal;
-  font-size: 3rem;
+  font-size: 1.125rem;
   color: #FF9C36;
   text-shadow: 0px 4px 1px rgba(122, 119, 119, 0.1);
-  transform: translate(296px, -20px);
+  transform: translate(103px, 5px);
 }
 
 .shark-header {
   position: absolute;
   z-index: 1000;
-  top: 14.875rem;
-  left: 7.9375rem;
-  width: 12.625rem;
-  height: 8.25rem;
+  top: 7.5625rem;
+  left: 1.25rem;
+  width: 6.25rem;
+  height: 3.125rem;
 }
 
 .header-line {
   position: absolute;
-  width: 19.25rem;
+  width: 5.875rem;
   height: 7.4375rem;
-  transform: translate(112px, 374px);
+  transform: translate(44px, 171px);
 }
 
 .main-slider {
@@ -1164,6 +1168,7 @@ template {
 }
 
 .slider-wrap {
+  position: relative;
   padding-left: 30%;
   display: flex;
   flex-direction: column;
@@ -1171,15 +1176,21 @@ template {
 }
 
 .owl-dots {
+  position: absolute !important;
+  z-index: 2000;
+  bottom: -2.1875rem;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
   margin-top: 1.6875rem;
 }
 
 .owl-dot {
-  width: 1.0625rem;
-  height: 1.0625rem;
-  border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  width: 1.0625rem !important;
+  height: 1.0625rem !important;
+  border-radius: 50% !important;
+  border: 1px solid rgba(0, 0, 0, 0.2) !important;
+  outline: none;
 }
 
 .owl-dot:nth-child(2) {
@@ -1187,8 +1198,8 @@ template {
 }
 
 .owl-dot.active {
-  background: #FFBB36;
-  border: none;
+  background: #FFBB36 !important;
+  border: none !important;
 }
 
 .tree {
@@ -1319,6 +1330,164 @@ template {
   }
 }
 
+@media (min-width: 560px) {
+  .cart {
+    top: 3.75rem;
+    right: 1.875rem;
+    width: 1.25rem;
+    height: 1.5625rem;
+  }
+
+  .cite-right {
+    width: 6.25rem;
+    top: 20.625rem;
+    right: 5.125rem;
+    font-size: 1.125rem;
+  }
+
+  .cite-right::after {
+    top: -2.3125rem;
+    right: -2.625rem;
+    width: 11.4375rem;
+    height: 6.9375rem;
+  }
+
+  .cite-left {
+    top: 32.8125rem;
+    width: 8.75rem;
+    font-size: 1.125rem;
+  }
+
+  .cite-left::after {
+    top: -2.375rem;
+    left: -1.625rem;
+    width: 11.4375rem;
+    height: 6.9375rem;
+  }
+
+  .socials {
+    width: 12.5625rem;
+    height: 8.75rem;
+    top: 18.75rem;
+    left: 5.3125rem;
+    font-size: 1rem;
+  }
+
+  .socials::after {
+    top: -1.5625rem;
+    left: -5.25rem;
+    width: 11.875rem;
+    height: 7.5rem;
+  }
+
+  .socials-list .instagram {
+    width: 1.4375rem;
+    height: 1.625rem;
+    margin-right: 1.625rem;
+  }
+
+  .socials-list .vk {
+    width: 1.6875rem;
+    height: 1.9375rem;
+  }
+
+  .top-menu .menu__item {
+    margin-left: 5rem;
+  }
+
+  .top-menu .menu__link {
+    font-size: 1.25rem;
+  }
+
+  .top-menu .phone svg {
+    left: -2.5rem;
+    width: 1.25rem;
+    height: 1.5625rem;
+  }
+
+  .logo {
+    width: 9.375rem;
+  }
+
+  .logo__subtitle {
+    font-size: 0.625rem;
+  }
+
+  .main-title {
+    max-width: 18.75rem;
+    margin-top: 3.75rem;
+    font-size: 1.875rem;
+  }
+
+  .catalog {
+    margin-top: 6.25rem;
+  }
+
+  .catalog__circle {
+    width: 5rem;
+    height: 5rem;
+    font-size: 1.5625rem;
+  }
+
+  .catalog__text {
+    font-size: 1.5625rem;
+    transform: translate(152px, -9px);
+  }
+
+  .shark-header {
+    top: 9.1875rem;
+    left: 0.1875rem;
+    width: 8.75rem;
+    height: 4.375rem;
+  }
+
+  .header-line {
+    width: 9.375rem;
+    height: 7.4375rem;
+    transform: translate(61px, 220px);
+  }
+}
+
+@media (min-width: 768px) {
+  .header {
+    background-position: 43% 25px, center;
+  }
+
+  .cart {
+    top: 3.75rem;
+    right: 6.25rem;
+    width: 1.5625rem;
+    height: 1.875rem;
+  }
+
+  .cite-right {
+    right: 5rem;
+  }
+
+  .cite-left {
+    left: 5rem;
+  }
+
+  .top-menu .menu-list {
+    margin-left: 5rem;
+  }
+
+  .top-menu .phone {
+    margin-left: auto;
+    margin-right: 5rem;
+  }
+
+  .catalog__text {
+    transform: translate(248px, 5px);
+  }
+
+  .header-line {
+    width: 15.1875rem;
+    height: 7.4375rem;
+    transform: translate(108px, 237px);
+  }
+}
+
 @media screen and (min-width: 800px) {
   .container-fluid {
     padding-left: 10px;
@@ -1340,6 +1509,256 @@ template {
   .container {
     padding-left: 10px;
     padding-right: 10px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .cite-right {
+    width: 6.25rem;
+    top: 28.125rem;
+    right: 10.625rem;
+    font-size: 1.25rem;
+  }
+
+  .cite-right::after {
+    top: -3.1875rem;
+    right: -4.6875rem;
+    width: 15.625rem;
+    height: 9.375rem;
+  }
+
+  .cite-left {
+    width: 8.75rem;
+    top: 42.5rem;
+    left: 10rem;
+    font-size: 1.25rem;
+  }
+
+  .cite-left::after {
+    top: -3.5rem;
+    left: -3.375rem;
+    width: 15.625rem;
+    height: 9.375rem;
+  }
+
+  .socials {
+    width: 12.5625rem;
+    height: 8.75rem;
+    top: 21.875rem;
+    left: 6.4375rem;
+    font-size: 1.125rem;
+  }
+
+  .socials::after {
+    left: -6.5625rem;
+    width: 14.8125rem;
+    height: 9.375rem;
+  }
+
+  .socials-list {
+    margin: 0.9375rem 0 0 -0.125rem;
+  }
+
+  .socials-list .instagram {
+    width: 2.0625rem;
+    height: 2.25rem;
+  }
+
+  .socials-list .vk {
+    width: 2.3125rem;
+    height: 2.5625rem;
+  }
+
+  .top-menu .menu__link {
+    font-size: 1.5rem;
+  }
+
+  .top-menu .phone {
+    font-size: 1.5rem;
+  }
+
+  .top-menu .phone svg {
+    width: 1.5625rem;
+    height: 1.875rem;
+  }
+
+  .logo {
+    width: 13rem;
+  }
+
+  .logo img {
+    right: 3.375rem;
+    top: 4.0625rem;
+    width: 4.6875rem;
+    height: 2.5rem;
+  }
+
+  .logo__title {
+    font-size: 4.375rem;
+  }
+
+  .logo__subtitle {
+    font-size: 0.75rem;
+  }
+
+  .main-title {
+    margin-top: 5rem;
+    max-width: 37.5rem;
+    font-size: 3.375rem;
+  }
+
+  .catalog {
+    margin-top: 8.125rem;
+  }
+
+  .catalog__circle {
+    width: 6.25rem;
+    height: 6.25rem;
+    font-size: 1.875rem;
+  }
+
+  .catalog__text {
+    font-size: 1.875rem;
+    transform: translate(286px, 5px);
+  }
+
+  .shark-header {
+    top: 13.75rem;
+    left: 7.3125rem;
+    width: 10.625rem;
+    height: 6.25rem;
+  }
+
+  .header-line {
+    width: 17.125rem;
+    transform: translate(128px, 319px);
+  }
+}
+
+@media (min-width: 1440px) {
+  .header {
+    background-position: 43% 0, center;
+  }
+
+  .cart {
+    top: 6.0625rem;
+    right: 5.125rem;
+    width: 1.875rem;
+    height: 2.1875rem;
+  }
+
+  .cite-right {
+    width: 11.25rem;
+    top: 32.625rem;
+    right: 10.625rem;
+    font-size: 2.25rem;
+  }
+
+  .cite-right::after {
+    top: -3.875rem;
+    right: -6.625rem;
+    width: 24.5625rem;
+    height: 13.125rem;
+  }
+
+  .cite-left {
+    width: 13.75rem;
+    top: 52.8125rem;
+    left: 10rem;
+    font-size: 2.25rem;
+  }
+
+  .cite-left::after {
+    top: -3.9375rem;
+    left: -5.4375rem;
+    width: 24.5625rem;
+    height: 13.125rem;
+  }
+
+  .socials {
+    width: 12.5625rem;
+    height: 8.75rem;
+    top: 35.375rem;
+    left: 8.25rem;
+    font-size: 1.5rem;
+  }
+
+  .socials::after {
+    top: -2.875rem;
+    left: -8.5625rem;
+    width: 18.25rem;
+    height: 11.5rem;
+  }
+
+  .socials-list {
+    margin: 0.9375rem 0 0 0.3125rem;
+  }
+
+  .arrows {
+    width: 4.125rem;
+    height: 4.125rem;
+    background-size: 25px, 31px;
+  }
+
+  .top-menu .menu__link {
+    font-size: 1.875rem;
+  }
+
+  .top-menu .phone {
+    font-size: 1.75rem;
+  }
+
+  .top-menu .phone svg {
+    width: 1.875rem;
+    height: 2.1875rem;
+  }
+
+  .logo {
+    width: 13rem;
+  }
+
+  .logo img {
+    right: 0;
+    top: 5.625rem;
+    width: 5.625rem;
+    height: 3.4375rem;
+  }
+
+  .logo__title {
+    font-size: 6rem;
+  }
+
+  .logo__subtitle {
+    margin-top: 1.25rem;
+    font-size: 0.875rem;
+  }
+
+  .main-title {
+    max-width: 48.8125rem;
+    font-size: 4.25rem;
+  }
+
+  .catalog__circle {
+    width: 8.75rem;
+    height: 8.75rem;
+    font-size: 2.5rem;
+  }
+
+  .catalog__text {
+    transform: translate(296px, -20px);
+    font-size: 3rem;
+  }
+
+  .shark-header {
+    top: 14.875rem;
+    left: 10.5rem;
+    width: 12.625rem;
+    height: 8.25rem;
+  }
+
+  .header-line {
+    width: 19.25rem;
+    transform: translate(112px, 374px);
   }
 }
 
