--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,6 @@ body {
   padding: 0 !important;
   display: flex;
   flex-direction: column;
-  height: 100%;
 }
 
 .container {
@@ -47,7 +46,6 @@ body {
   padding-left: 15px;
   padding-right: 15px;
   max-width: 120rem;
-  height: 100%;
 }
 
 /* Box-sizing-model */
@@ -617,6 +615,7 @@ template {
 .header {
   position: relative;
   width: 100%;
+  min-height: 100vh;
   background-image: url(../img/orange-arc.svg), url(../img/header-bg-desktop@1x.jpg);
   background-repeat: no-repeat, no-repeat;
   background-position: 43% 36px, center;
@@ -626,6 +625,7 @@ template {
 .header__inner {
   position: relative;
   width: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -657,10 +657,10 @@ template {
 .cite-right::after {
   position: absolute;
   content: "";
-  top: -1.5rem;
-  right: -1rem;
-  width: 8.125rem;
-  height: 4.625rem;
+  top: -1.125rem;
+  right: 0.4375rem;
+  width: 5.5rem;
+  height: 3.5625rem;
   background-image: url(../img/dashed-elipse.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -685,10 +685,10 @@ template {
 .cite-left::after {
   position: absolute;
   content: "";
-  top: -1.5625rem;
-  left: -1.25rem;
-  width: 8.125rem;
-  height: 4.625rem;
+  top: -1.1875rem;
+  left: 0.25rem;
+  width: 5.5rem;
+  height: 3.5625rem;
   background-image: url(../img/dashed-elipse.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -741,6 +741,7 @@ template {
   background-position: center;
   background-size: cover;
   transform: rotate(13deg);
+  transition: all 0.3s ease-out;
 }
 
 .socials-list .vk {
@@ -751,6 +752,7 @@ template {
   background-position: center;
   background-size: cover;
   transform: rotate(13deg);
+  transition: all 0.3s ease-out;
 }
 
 .arrows {
@@ -769,32 +771,31 @@ template {
 .slider-section {
   width: 100%;
   display: flex;
-  background-image: url(../img/avokado.png);
-  background-repeat: no-repeat;
-  background-position: 0% 430px;
-  background-size: 220px 308px;
+  flex-direction: column;
+  padding-top: 1.25rem;
 }
 
 .order {
   width: 100%;
-  padding-top: 8.375rem;
+  padding-top: 5.625rem;
 }
 
 .order__title {
   text-align: center;
-  margin-bottom: 13.3125rem;
+  margin-bottom: 5rem;
   font-family: "AmaticSC-Bold";
   font-weight: normal;
   font-style: normal;
-  font-size: 3rem;
+  font-size: 1.5625rem;
   color: rgba(0, 0, 0, 0.9);
   text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.25);
 }
 
 .order .order-list {
-  margin: 0 25rem;
+  max-width: 25rem;
+  margin: auto;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
 }
 
 .order .order__item {
@@ -802,33 +803,34 @@ template {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 1.25rem;
 }
 
 .order .order__text {
-  margin-bottom: 2.4375rem;
+  margin-bottom: 0.9375rem;
   font-family: "AmaticSC-Bold";
   font-weight: normal;
   font-style: normal;
-  font-size: 2.25rem;
+  font-size: 1.25rem;
   color: rgba(0, 0, 0, 0.8);
   text-shadow: 0px 4px 2px rgba(129, 128, 128, 0.25);
 }
 
 .order .catalog-icon {
-  width: 2.125rem;
-  height: 2.375rem;
+  width: 1.5rem;
+  height: 1.6875rem;
   fill: #F47F12;
 }
 
 .order .toy-icon {
-  width: 2.5rem;
-  height: 2.9375rem;
+  width: 1.875rem;
+  height: 2.3125rem;
   fill: #F47F12;
 }
 
 .order .rocket-icon {
-  width: 2.625rem;
-  height: 2.9375rem;
+  width: 2rem;
+  height: 2.3125rem;
   fill: #F47F12;
 }
 
@@ -839,38 +841,34 @@ template {
 }
 
 .order .order-line-1 {
-  top: 7.5rem;
-  left: 5.3125rem;
-  width: 28.125rem;
-  height: 7.875rem;
-  margin-bottom: 4.0625rem;
+  display: none;
 }
 
 .order .order-line-2 {
-  top: -5.625rem;
-  left: 6.25rem;
-  width: 27.5625rem;
-  height: 17.0625rem;
+  display: none;
 }
 
 .order .arrows--up {
   transform: rotate(180deg);
+  margin-top: 3.125rem;
 }
 
 .footer {
   position: relative;
   width: 100%;
-  padding: 4.6875rem 5.0625rem 5.375rem 5.0625rem;
+  padding: 1.25rem 1.25rem 1.25rem 1.25rem;
   background: #2C2C2C;
 }
 
 .footer__inner {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  align-items: center;
 }
 
 .footer .logo {
-  margin-top: 0.625rem;
+  margin-top: 1.875rem;
 }
 
 .footer .logo__title--footer,
@@ -879,22 +877,22 @@ template {
 }
 
 .footer .col__title {
-  margin-bottom: 3.75rem;
+  margin-bottom: 1.875rem;
   font-family: "Montserrat-SemiBold";
   font-weight: 600;
   font-style: normal;
-  font-size: 1.75rem;
+  font-size: 0.875rem;
   color: #FFFFFF;
 }
 
 .footer .col__text {
   position: relative;
   margin-bottom: 2.5rem;
-  padding-left: 3.125rem;
+  padding-left: 1.875rem;
   font-family: "Montserrat-Regular";
   font-weight: normal;
   font-style: normal;
-  font-size: 1.75rem;
+  font-size: 0.75rem;
   color: #FFFFFF;
 }
 
@@ -906,15 +904,30 @@ template {
   fill: #fff;
 }
 
+.footer .col__text svg:nth-child(1) {
+  width: 1.25rem;
+  height: 1.5625rem;
+}
+
 .footer .first-col,
 .footer .second-col,
 .footer .third-col {
+  width: 12.6875rem;
   display: flex;
   flex-direction: column;
 }
 
 .footer .fourth-col {
   padding-top: 2.625rem;
+  display: none;
+}
+
+.footer .col-wrap {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 1.25rem;
 }
 
 .footer .catalog--footer {
@@ -923,8 +936,8 @@ template {
 
 .footer .catalog__circle--footer {
   position: absolute;
-  top: -4.1875rem;
-  right: 15.625rem;
+  top: -1.75rem;
+  right: 3.125rem;
 }
 
 .footer .catalog__circle--footer::before {
@@ -935,12 +948,12 @@ template {
   border: 2px dashed #F47F12;
 }
 
+.footer .unicorn {
+  display: none;
+}
+
 .footer .unicorn-line {
-  position: absolute;
-  top: 5.9375rem;
-  right: 14.3125rem;
-  width: 5.75rem;
-  height: 7.25rem;
+  display: none;
 }
 
 /* BLOCKS */
@@ -1134,42 +1147,51 @@ template {
 }
 
 .main-slider {
-  width: 50%;
-  padding-top: 15.625rem;
+  width: 100%;
+  padding-top: 3.125rem;
   display: flex;
   justify-content: center;
 }
 
 .main-slider__title {
-  margin-bottom: 8.125rem;
+  margin-bottom: 3.125rem;
   font-family: "AmaticSC-Bold";
   font-weight: normal;
   font-style: normal;
-  font-size: 4rem;
+  font-size: 1.5625rem;
   text-align: center;
   color: rgba(0, 0, 0, 0.9);
   text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.25);
 }
 
+.main-slider__title--desktop {
+  display: none;
+}
+
+.main-slider__title--mobile {
+  display: block;
+  order: -1;
+  margin-bottom: 0;
+}
+
 .main-slider .slider {
-  width: 28.875rem;
-  height: 34.375rem;
+  width: 18.75rem;
+  height: 25rem;
 }
 
 .main-slider .slide {
-  width: 28.875rem;
-  height: 34.375rem;
+  width: 18.75rem;
+  height: 25rem;
 }
 
 .main-slider .slide img {
   border-radius: 1.25rem;
-  width: 28.875rem;
-  height: 34.375rem;
+  width: 18.75rem;
+  height: 25rem;
 }
 
 .slider-wrap {
   position: relative;
-  padding-left: 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1204,42 +1226,47 @@ template {
 
 .tree {
   position: relative;
-  width: 50%;
-  padding-top: 5.9375rem;
+  width: 100%;
+  padding-top: 1.875rem;
   display: flex;
   justify-content: flex-end;
+  order: -1;
+}
+
+.tree .tree-img {
+  width: 18.75rem;
 }
 
 .bitten-bisquit {
   position: absolute;
-  top: 16.5625rem;
-  right: 28.4375rem;
-  width: 17.125rem;
-  height: 17.125rem;
+  top: 5.625rem;
+  right: 9.4375rem;
+  width: 6.875rem;
+  height: 6.875rem;
 }
 
 .bisquit-1 {
   position: absolute;
-  top: 14.625rem;
-  right: 1.5625rem;
-  width: 17.125rem;
-  height: 17.125rem;
+  top: 4.5625rem;
+  right: 0.5625rem;
+  width: 6.875rem;
+  height: 6.875rem;
 }
 
 .bisquit-2 {
   position: absolute;
-  top: 33.5625rem;
-  right: 11.5625rem;
-  width: 17.125rem;
-  height: 17.125rem;
+  top: 11.75rem;
+  right: 3.5625rem;
+  width: 6.875rem;
+  height: 6.875rem;
 }
 
 .bisquit-3 {
   position: absolute;
-  top: 52.9375rem;
-  right: 41.5625rem;
-  width: 17.125rem;
-  height: 17.125rem;
+  top: 18.0625rem;
+  right: 12.8125rem;
+  width: 6.875rem;
+  height: 6.875rem;
 }
 
 .bisquit-content {
@@ -1251,31 +1278,35 @@ template {
 }
 
 .bisquit-content-1 {
-  top: 20.75rem;
-  right: 30.1875rem;
+  top: 7.125rem;
+  right: 9.625rem;
+}
+
+.bisquit-content-1 .bisquit__text {
+  max-width: 6.625rem;
 }
 
 .bisquit-content-2 {
-  top: 17.625rem;
-  right: 1.5rem;
+  top: 5.125rem;
+  right: 0.9375rem;
 }
 
 .bisquit-content-2 .bisquit__text {
-  max-width: 17.3125rem;
+  max-width: 6.25rem;
 }
 
 .bisquit-content-3 {
-  top: 36.8125rem;
-  right: 12.375rem;
+  top: 12.125rem;
+  right: 3.5rem;
 }
 
 .bisquit-content-3 .bisquit__text {
-  max-width: 15.625rem;
+  max-width: 7.0625rem;
 }
 
 .bisquit-content-4 {
-  top: 57.5rem;
-  right: 46.1875rem;
+  top: 19.375rem;
+  right: 14.375rem;
 }
 
 .bisquit-content-4 .bisquit__text {
@@ -1283,11 +1314,11 @@ template {
 }
 
 .bisquit__title {
-  margin-bottom: 1.25rem;
+  margin-bottom: 0.3125rem;
   font-family: "AmaticSC-Bold";
   font-weight: normal;
   font-style: normal;
-  font-size: 3rem;
+  font-size: 1.25rem;
   text-align: center;
   letter-spacing: -0.035em;
   color: #FFF506;
@@ -1299,8 +1330,7 @@ template {
   font-family: "AmaticSC-Bold";
   font-weight: normal;
   font-style: normal;
-  font-size: 1.5rem;
-  line-height: 2.5rem;
+  font-size: 0.875rem;
   text-align: center;
   color: #FFFFFF;
   text-shadow: 0px 4px 1px rgba(219, 218, 218, 0.25);
@@ -1315,6 +1345,50 @@ template {
   .container {
     padding-left: 6px;
     padding-right: 6px;
+  }
+}
+
+@media (min-width: 425px) {
+  .order .order-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .order .order__item {
+    margin-bottom: 0;
+  }
+
+  .order .order-line-1 {
+    display: block;
+    top: 1.625rem;
+    left: 3rem;
+    width: 8.8125rem;
+    height: 7.875rem;
+  }
+
+  .order .order-line-2 {
+    display: block;
+    top: -7.6875rem;
+    left: 3.1875rem;
+    width: 9.9375rem;
+    height: 18rem;
+  }
+
+  .footer__inner {
+    align-items: flex-start;
+  }
+
+  .footer .first-col,
+  .footer .second-col,
+  .footer .third-col {
+    width: auto;
+  }
+
+  .footer .col-wrap {
+    width: 90%;
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
 
@@ -1391,6 +1465,16 @@ template {
     height: 1.9375rem;
   }
 
+  .footer__inner {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .footer .catalog__circle--footer {
+    top: -3.75rem;
+    right: 3.125rem;
+  }
+
   .top-menu .menu__item {
     margin-left: 5rem;
   }
@@ -1436,7 +1520,7 @@ template {
 
   .shark-header {
     top: 9.1875rem;
-    left: 0.1875rem;
+    left: -1.3125rem;
     width: 8.75rem;
     height: 4.375rem;
   }
@@ -1445,6 +1529,70 @@ template {
     width: 9.375rem;
     height: 7.4375rem;
     transform: translate(61px, 220px);
+  }
+}
+
+@media (min-width: 650px) {
+  .order {
+    padding-top: 6.25rem;
+  }
+
+  .order__title {
+    margin-bottom: 6.25rem;
+    font-size: 1.875rem;
+  }
+
+  .order .order-list {
+    max-width: 37.5rem;
+  }
+
+  .order .order__text {
+    margin-bottom: 0.9375rem;
+    font-size: 1.625rem;
+  }
+
+  .order .catalog-icon {
+    width: 1.8125rem;
+    height: 2.0625rem;
+  }
+
+  .order .toy-icon {
+    width: 2.1875rem;
+    height: 2.625rem;
+  }
+
+  .order .rocket-icon {
+    width: 2.3125rem;
+    height: 2.625rem;
+  }
+
+  .order .order-line-1 {
+    top: 3.5rem;
+    left: 4.125rem;
+    width: 13.6875rem;
+  }
+
+  .order .order-line-2 {
+    top: -7.1875rem;
+    left: 4.5rem;
+    width: 14.1875rem;
+  }
+
+  .footer {
+    padding: 3.125rem 3.75rem 1.25rem 3.75rem;
+  }
+
+  .footer .col-wrap {
+    width: 70%;
+  }
+
+  .footer .catalog__circle--footer {
+    top: -2.125rem;
+  }
+
+  .main-slider__title {
+    margin-bottom: 6.25rem;
+    font-size: 3rem;
   }
 }
 
@@ -1564,9 +1712,102 @@ template {
     height: 2.25rem;
   }
 
-  .socials-list .vk {
+  .socials-list .instagram:hover {
     width: 2.3125rem;
     height: 2.5625rem;
+  }
+
+  .socials-list .vk {
+    width: 2.0625rem;
+    height: 2.25rem;
+  }
+
+  .socials-list .vk:hover {
+    width: 2.3125rem;
+    height: 2.5625rem;
+  }
+
+  .order {
+    padding-top: 8.375rem;
+  }
+
+  .order__title {
+    margin-bottom: 13.3125rem;
+    font-size: 3rem;
+  }
+
+  .order .order-list {
+    max-width: 50rem;
+  }
+
+  .order .order__text {
+    margin-bottom: 2.4375rem;
+    font-size: 2.25rem;
+  }
+
+  .order .catalog-icon {
+    width: 2.125rem;
+    height: 2.375rem;
+  }
+
+  .order .toy-icon {
+    width: 2.5rem;
+    height: 2.9375rem;
+  }
+
+  .order .rocket-icon {
+    width: 2.625rem;
+    height: 2.9375rem;
+  }
+
+  .order .order-line-1 {
+    top: 5.4375rem;
+    left: 5.5rem;
+    width: 18.3125rem;
+  }
+
+  .order .order-line-2 {
+    top: -5.75rem;
+    left: 5.625rem;
+    width: 19.1875rem;
+  }
+
+  .order .arrows--up {
+    margin-top: 9.375rem;
+  }
+
+  .footer .col__title {
+    font-size: 1rem;
+  }
+
+  .footer .col__text {
+    font-size: 0.875rem;
+  }
+
+  .footer .fourth-col {
+    display: block;
+  }
+
+  .footer .col-wrap {
+    width: 75%;
+  }
+
+  .footer .catalog__circle--footer {
+    top: -2.5rem;
+    right: 11.125rem;
+  }
+
+  .footer .unicorn {
+    display: block;
+  }
+
+  .footer .unicorn-line {
+    display: block;
+    position: absolute;
+    top: 5rem;
+    right: 9.4375rem;
+    width: 5.75rem;
+    height: 5.125rem;
   }
 
   .top-menu .menu__link {
@@ -1624,7 +1865,7 @@ template {
 
   .shark-header {
     top: 13.75rem;
-    left: 7.3125rem;
+    left: 5.9375rem;
     width: 10.625rem;
     height: 6.25rem;
   }
@@ -1632,6 +1873,39 @@ template {
   .header-line {
     width: 17.125rem;
     transform: translate(128px, 319px);
+  }
+
+  .main-slider__title {
+    margin-bottom: 8.125rem;
+    font-size: 4rem;
+  }
+}
+
+@media (min-width: 1100px) {
+  .footer .col__title {
+    margin-bottom: 2.5rem;
+    font-size: 1.125rem;
+  }
+
+  .footer .col__text {
+    padding-left: 1.875rem;
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 1365px) {
+  .footer .col__title {
+    margin-bottom: 3.75rem;
+    font-size: 1.5rem;
+  }
+
+  .footer .col__text {
+    padding-left: 3.125rem;
+    font-size: 1.375rem;
+  }
+
+  .footer .col-wrap {
+    width: 80%;
   }
 }
 
@@ -1700,6 +1974,65 @@ template {
     background-size: 25px, 31px;
   }
 
+  .slider-section {
+    padding-top: 0;
+    flex-direction: row;
+    background-image: url(../img/avokado.png);
+    background-repeat: no-repeat;
+    background-position: 0% 430px;
+    background-size: 220px 308px;
+  }
+
+  .order .order-list {
+    max-width: 69rem;
+  }
+
+  .order .order-line-1 {
+    top: 7.5rem;
+    left: 5.3125rem;
+    width: 28.125rem;
+  }
+
+  .order .order-line-2 {
+    top: -5.625rem;
+    left: 6.25rem;
+    width: 27.5625rem;
+    height: 17.0625rem;
+  }
+
+  .footer {
+    padding: 4.6875rem 5.0625rem 5.375rem 5.0625rem;
+  }
+
+  .footer .col__title {
+    font-size: 1.5rem;
+  }
+
+  .footer .col__text {
+    font-size: 1.375rem;
+  }
+
+  .footer .col__text svg:nth-child(1) {
+    width: 1.875rem;
+    height: 2.1875rem;
+  }
+
+  .footer .col-wrap {
+    width: 77%;
+    margin-left: 1.875rem;
+  }
+
+  .footer .catalog__circle--footer {
+    top: -4.1875rem;
+    right: 13.1875rem;
+  }
+
+  .footer .unicorn-line {
+    top: 5.4375rem;
+    right: 12.4375rem;
+    height: 6.5rem;
+  }
+
   .top-menu .menu__link {
     font-size: 1.875rem;
   }
@@ -1751,7 +2084,7 @@ template {
 
   .shark-header {
     top: 14.875rem;
-    left: 10.5rem;
+    left: 7.9375rem;
     width: 12.625rem;
     height: 8.25rem;
   }
@@ -1760,10 +2093,136 @@ template {
     width: 19.25rem;
     transform: translate(112px, 374px);
   }
+
+  .main-slider {
+    width: 50%;
+    padding-top: 15.625rem;
+  }
+
+  .main-slider__title--desktop {
+    display: block;
+  }
+
+  .main-slider__title--mobile {
+    display: none;
+  }
+
+  .main-slider .slider {
+    width: 28.8125rem;
+    height: 34.375rem;
+  }
+
+  .main-slider .slide {
+    width: 28.8125rem;
+    height: 34.375rem;
+  }
+
+  .main-slider .slide img {
+    width: 28.8125rem;
+    height: 34.375rem;
+  }
+
+  .slider-wrap {
+    padding-left: 30%;
+  }
+
+  .tree {
+    padding-top: 5.9375rem;
+    width: 50%;
+    order: 1;
+  }
+
+  .tree .tree-img {
+    width: auto;
+  }
+
+  .bitten-bisquit {
+    top: 16.5625rem;
+    right: 28.4375rem;
+    width: 17.125rem;
+    height: 17.125rem;
+  }
+
+  .bisquit-1 {
+    top: 14.625rem;
+    right: 1.5625rem;
+    width: 17.125rem;
+    height: 17.125rem;
+  }
+
+  .bisquit-2 {
+    top: 33.5625rem;
+    right: 11.5625rem;
+    width: 17.125rem;
+    height: 17.125rem;
+  }
+
+  .bisquit-3 {
+    top: 52.9375rem;
+    right: 41.5625rem;
+    width: 17.125rem;
+    height: 17.125rem;
+  }
+
+  .bisquit-content-1 {
+    top: 20.75rem;
+    right: 30.1875rem;
+  }
+
+  .bisquit-content-1 .bisquit__text {
+    max-width: 17.3125rem;
+  }
+
+  .bisquit-content-2 {
+    top: 17.625rem;
+    right: 1.5rem;
+  }
+
+  .bisquit-content-2 .bisquit__text {
+    max-width: 17.3125rem;
+  }
+
+  .bisquit-content-3 {
+    top: 36.8125rem;
+    right: 12.375rem;
+  }
+
+  .bisquit-content-3 .bisquit__text {
+    max-width: 15.625rem;
+  }
+
+  .bisquit-content-4 {
+    top: 57.5rem;
+    right: 46.1875rem;
+  }
+
+  .bisquit__title {
+    margin-bottom: 1.25rem;
+    font-size: 3rem;
+  }
+
+  .bisquit__text {
+    font-size: 1.5rem;
+    line-height: 2.5rem;
+  }
+}
+
+@media (min-width: 1500px) {
+  .footer .col__title {
+    font-size: 1.75rem;
+  }
+
+  .footer .col__text {
+    font-size: 1.75rem;
+  }
+
+  .footer .col-wrap {
+    width: 56%;
+  }
 }
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
   .header {
-    background-image: url(../img/header-bg-desktop@2x.jpg);
+    background-image: url(../img/orange-arc.svg), url(../img/header-bg-desktop@2x.jpg);
   }
 }
