--- a/css/main.css
+++ b/css/main.css
@@ -1228,6 +1228,7 @@ template {
 
 .tree .tree-img {
   width: 18.75rem;
+  height: 25.625rem;
 }
 
 .bitten-bisquit {
@@ -1552,6 +1553,7 @@ template {
 
   .tree .tree-img {
     width: 25rem;
+    height: 34.75rem;
   }
 
   .bitten-bisquit {
@@ -1734,6 +1736,7 @@ template {
 
   .tree .tree-img {
     width: 31.25rem;
+    height: 43.4375rem;
   }
 
   .bitten-bisquit {
@@ -1882,6 +1885,7 @@ template {
 
   .tree .tree-img {
     width: 43.75rem;
+    height: 59.875rem;
   }
 
   .bitten-bisquit {
@@ -2225,6 +2229,7 @@ template {
 
   .tree .tree-img {
     width: 52.5rem;
+    height: 72.875rem;
   }
 
   .bitten-bisquit {
@@ -2371,6 +2376,7 @@ template {
 
   .tree .tree-img {
     width: 43.75rem;
+    height: 59.75rem;
   }
 
   .bitten-bisquit {
@@ -2727,6 +2733,7 @@ template {
 
   .tree .tree-img {
     width: auto;
+    height: 71.25rem;
   }
 
   .bitten-bisquit {
