Finished cards js desktop

--- a/css/main.css
+++ b/css/main.css
@@ -1506,7 +1506,7 @@ template {
   display: none;
   position: fixed;
   z-index: 4000;
-  top: 0;
+  top: 3.25rem;
   bottom: 0;
   left: 0;
   right: 0;
@@ -1527,13 +1527,17 @@ template {
   width: 54.375rem;
   display: flex;
   justify-content: space-between;
-  padding: 1.25rem 0 0 3.75rem;
+  padding: 1.25rem 0 0 0;
   background: #fff;
 }
 
 .card .left-col,
 .card .right-col {
   width: 50%;
+}
+
+.card .left-col__inner {
+  padding-left: 3.8125rem;
 }
 
 .card .toy-title {
@@ -1571,6 +1575,7 @@ template {
   cursor: pointer;
 }
 
+.card .to-catalog-btn,
 .card .to-cart-btn {
   height: 4.9375rem;
   display: flex;
@@ -1583,9 +1588,12 @@ template {
   font-size: 1.25rem;
   line-height: 50%;
   text-align: center;
+  cursor: pointer;
+}
+
+.card .to-cart-btn {
   color: #FFFFFF;
   background: #FF9C36;
-  cursor: pointer;
 }
 
 .card .card-close {
@@ -1619,6 +1627,100 @@ template {
 
 .card .card-close:after {
   transform: rotate(-45deg);
+}
+
+.card .toy-info {
+  width: 19.5rem;
+  margin: 6rem 0 2.125rem 0;
+}
+
+.card .toy-size,
+.card .toy-material,
+.card .toy-wadding {
+  display: flex;
+  justify-content: space-between;
+  font-family: "Montserrat-Regular";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 1.125rem;
+  line-height: 80%;
+  color: rgba(0, 0, 0, 0.65);
+}
+
+.card .toy-size,
+.card .toy-material {
+  margin-bottom: 1.3125rem;
+}
+
+.card .toy-description {
+  width: 20.1875rem;
+  margin-bottom: 3rem;
+  font-family: "Montserrat-Regular";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 1.125rem;
+  line-height: 96%;
+  color: #000;
+}
+
+.card .price-block {
+  display: flex;
+  align-items: center;
+}
+
+.card .toy-count {
+  width: 4.0625rem;
+  min-height: 1.75rem;
+  margin: 1.75rem 3.8125rem 1.25rem 0;
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid rgba(0, 0, 0, 0.4);
+}
+
+.card .count-arrows {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 0.375rem;
+  min-width: 2.5rem;
+  min-height: 1.75rem;
+}
+
+.card .count__arrow-left,
+.card .count__arrow-right {
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.card .toy__number {
+  min-height: 1.5625rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.3125rem 0.5rem;
+  background: #000;
+  color: #fff;
+}
+
+.card .price {
+  margin-top: 0.625rem;
+  font-family: "Montserrat-Regular";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 1.75rem;
+  line-height: 80%;
+  color: #FF8718;
+}
+
+.card .to-catalog-btn {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 50%;
+  color: rgba(0, 0, 0, 0.7);
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  cursor: pointer;
 }
 
 @media screen and (min-width: 320px) {
