Added to catalog btn js

--- a/css/main.css
+++ b/css/main.css
@@ -1730,6 +1730,8 @@ template {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 56.25rem;
+  height: 56.25rem;
 }
 
 .full-img--active {
