--- a/css/main.css
+++ b/css/main.css
@@ -1152,6 +1152,12 @@ template {
   color: #C6000C;
 }
 
+.form .input-hidden {
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+}
+
 .success {
   position: absolute;
   z-index: 5000;
